# zonatelecom_demo_project

./: .env.example  README.md  config.py  pyproject.toml
tests/: conftest.py
tests/api/: test_get_index.py
tests/ui/: test_auth_page.py  test_banner.py  test_header.py
zonatelecom_demo_project/: website.py
zonatelecom_demo_project/components/: header.py
zonatelecom_demo_project/data/json_schemes/: index.json
zonatelecom_demo_project/pages/: auth_page.py  main_page.py  mobile_app_page.py  money_order_page.py  payments_letter_page.py  uis_kaluzhskoe_page.py
zonatelecom_demo_project/utils/: json_schema_utils.py
